# DESI-fT-gravity

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: lcdm_desi_bao.yaml
notebooks/: 01_data_exploration.ipynb
scripts/: download_data.py  run.py
src/desi_ft/: __init__.py
src/desi_ft/cosmology/: __init__.py  distances.py
src/desi_ft/inference/: __init__.py  diagnostics.py  mcmc.py
src/desi_ft/likelihoods/: __init__.py  bao.py
src/desi_ft/models/: __init__.py  base.py  lcdm.py
src/desi_ft/plotting/: __init__.py  contours.py
tests/: test_distances.py  test_lcdm.py
